syntax = "proto3";
package kira.slashing;

option go_package = "github.com/KiraCore/sekai/x/slashing/types";

import "gogoproto/gogo.proto";
import "kira/slashing/v1beta1/slashing.proto";

// GenesisState defines the slashing module's genesis state.
message GenesisState {
  // params defines all the paramaters of related to deposit.
  Params params = 1 [(gogoproto.nullable) = false];

  // signing_infos represents a map between validator addresses and their
  // signing infos.
  repeated SigningInfo signing_infos = 2
      [(gogoproto.moretags) = "yaml:\"signing_infos\"", (gogoproto.nullable) = false];
}

// SigningInfo stores validator signing info of corresponding address.
message SigningInfo {
  // address is the validator address.
  string address = 1;
  // validator_signing_info represents the signing info of this validator.
  ValidatorSigningInfo validator_signing_info = 2
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"validator_signing_info\""];
}
